Sort out missing link to vid

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 	<meta charset="utf-8">
-	<title>Milness - Landing page Showcase App</title>
+	<title>Hashbang | A cyber startup</title>
 	<meta name="description" content="">
     <meta name="author" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -137,8 +137,8 @@
 <!-- Start Slider section	 -->
 
 <section class="hero-container">
-	<video loop muted autoplay poster="img/videoframe.jpg" class="fullscreen-bg__video sub">
-		<source src="../../milness-template/app/1056171731-sd.mov" type="video/mp4">
+	<video loop muted autoplay class="fullscreen-bg__video sub">
+		<source src="./1056171731-lowres.mp4" type="video/mp4">
 	</video>
 	<div class="dots-layer"></div>
 	<div class="dark-overlay"></div>
