add playsinline attr for ios

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 <!-- Start Slider section	 -->
 
 <section class="hero-container">
-	<video loop muted autoplay class="fullscreen-bg__video sub">
+	<video loop muted autoplay playsinline class="fullscreen-bg__video sub">
 		<source src="./1056171731-lowres.mp4" type="video/mp4">
 	</video>
 	<div class="dots-layer"></div>
