Icons and description

--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 <head>
 
 	<meta charset="utf-8">
-	<title>Hashbang | A cyber startup</title>
-	<meta name="description" content="">
+	<title>Hashbang | A Cyber Startup</title>
+	<meta name="description" content="Hashbang Digital are a cyber startup specialising in digital solutions for enterprise business.">
     <meta name="author" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link href="images/favicon.png" rel="icon"/>
-	
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="img/favicon/android-chrome-192x192.png">
+	<link rel="icon" type="image/png" sizes="512x512" href="img/favicon/android-chrome-512x512.png">
+	<link rel="shortcut icon" href="img/favicon/favicon.ico">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+
 	<link rel="stylesheet" href="libs/bootstrap/css/bootstrap-grid.min.css">
 	<!-- Icon fonts -->
 	<link rel="stylesheet" href="libs/pe-icon-7-stroke/css/pe-icon-7-stroke.css">
