--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
 <section class="hero-container">
 	<video loop muted autoplay playsinline class="fullscreen-bg__video sub">
-		<source src="./1056171731-lowres.mp4" type="video/mp4">
+		<source src="1056171731-sd-8.mp4" type="video/mp4">
 	</video>
 	<div class="dots-layer"></div>
 	<div class="dark-overlay"></div>
